src/objects/CRM_WF_Artes__c.object
<CustomObject>
    <fields>
        <fullName>Bines_que_participan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bines que participanTexto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Abiertos_Unicos__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de abiertos únicos en un Canal</description>
        <label>Abiertos únicos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Application_Name__c</fullName>
        <label>Application name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compraventa_Plazo</fullName>
                </value>
                <value>
                    <fullName>Compraventa_Plazos</fullName>
                </value>
                <value>
                    <fullName>Efectivo_Inmediato_One_Click</fullName>
                </value>
                <value>
                    <fullName>Gastos_Funerarios</fullName>
                </value>
                <value>
                    <fullName>Incremento_De_Linea_One_Click</fullName>
                </value>
                <value>
                    <fullName>Inversion_A_Plazos</fullName>
                </value>
                <value>
                    <fullName>No_Aplica</fullName>
                </value>
                <value>
                    <fullName>Portabilidad_Nomina_One_Click</fullName>
                </value>
                <value>
                    <fullName>Prestamo_Personal_One_Click</fullName>
                </value>
                <value>
                    <fullName>Seguro_Contenidos_Del_Hogar_One_Click</fullName>
                </value>
                <value>
                    <fullName>Seguro_De_Hogar_One_Click</fullName>
                </value>
                <value>
                    <fullName>Seguro_De_Vida_One_Click</fullName>
                </value>
                <value>
                    <fullName>Tarjeta_De_Credito_One_Click</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Folio_de_Brief__c</fullName>
        <description>Campo para la aplicación WF, que informa el fólio del Brief al que está asociado el Arte</description>
        <formula>CRM_WF_Nombre_Del_Brief__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio de Brief</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Audiencia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicar segmentación o ciclos de vida que se utilizará en esta versión/arte.</inlineHelpText>
        <label>Audiencia versión/arte</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Base_Total__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Base total en un Canal</description>
        <label>Base total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Beneficios__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_CTOR_MC__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Clicks únicos entre Abiertos únicos en un Canal</description>
        <formula>CRM_WF_Clicks_Unicos__c /  CRM_WF_Abiertos_Unicos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTOR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_CTOR__c</fullName>
        <inlineHelpText>Porcentaje o tasa de clics estimados para esta versión/arte.</inlineHelpText>
        <label>CTOR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_CTR__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Clicks únicos entre Entregados en un Canal</description>
        <formula>CRM_WF_Clicks_Unicos__c / CRM_WF_Entregados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Call_Action__c</fullName>
        <label>¿Call to action (CTA)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Call_to_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call to action (CTA)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRM_WF_Tipo_de_Canal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Bancomer Móvil</fullName>
                    <label>BANCOMER_MOVIL</label>
                </value>
                <value>
                    <fullName>Bancomercom</fullName>
                    <label>BANCOMERCOM</label>
                </value>
                <value>
                    <fullName>Bancomercom y Bancomer Móvil</fullName>
                    <label>BANCOMERCOM_Y_BANCOMER_MOVIL</label>
                </value>
                <value>
                    <fullName>Banquero Patrimonial Privada</fullName>
                    <label>BANQUERO_PATRIMONIAL_PRIVADA</label>
                </value>
                <value>
                    <fullName>BBVA GLOMO</fullName>
                    <label>BBVA_GLOMO</label>
                </value>
                <value>
                    <fullName>Bnegocios</fullName>
                    <label>BNEGOCIOS</label>
                </value>
                <value>
                    <fullName>Comercio Distribuidor</fullName>
                    <label>COMERCIO_DISTRIBUIDOR</label>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                    <label>E-COMMERCE</label>
                </value>
                <value>
                    <fullName>Netcash</fullName>
                    <label>NETCASH</label>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                    <label>NO_APLICA</label>
                </value>
                <value>
                    <fullName>Startup</fullName>
                    <label>STARTUP</label>
                </value>
                <value>
                    <fullName>Sucursal</fullName>
                    <label>SUCURSAL</label>
                </value>
                <value>
                    <fullName>Telefono</fullName>
                    <label>TELEFONO</label>
                </value>
                <value>
                    <fullName>Tpv</fullName>
                    <label>TPV</label>
                </value>
                <value>
                    <fullName>Wibecom</fullName>
                    <label>WIBECOM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Clicks_Totales__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Clicks Totales en un Canal</description>
        <label>Clicks totales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Clicks_Unicos__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Clicks Únicos en un Canal</description>
        <label>Clicks únicos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Contratado_O_Aprobado__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para seleccionar un valor de Contratado o aprobado en un Canal</description>
        <label>Contratado o aprobado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Copy_Requiere_Datos_Variables__c</fullName>
        <label>El copy requiere datos variables</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Costos_o_Comisiones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Costos o comisiones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Data_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data extension</label>
        <referenceTo>CRM_WF_Data_Extension__c</referenceTo>
        <relationshipLabel>Canales</relationshipLabel>
        <relationshipName>Canales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_De_Enviados__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Total de enviados entre Base Total en un Canal</description>
        <formula>CRM_WF_Total_De_Enviados__c  / CRM_WF_Base_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% de enviados</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_De_Rebotes__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Rebotados entre Total de enviados en un Canal</description>
        <formula>CRM_WF_Rebotados__c / CRM_WF_Total_De_Enviados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% de rebotes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Duplicados__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Duplicados en un Canal</description>
        <label>Duplicados</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Duracion__c</fullName>
        <inlineHelpText>Indicar duración de acuerdo a la unidad de medición seleccionada</inlineHelpText>
        <label>Duración</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_El_Material_Es_Parte__c</fullName>
        <inlineHelpText>¿Este arte/versión forma parte de una campaña masiva?
¿Que persona està coordinando la campaña en Terán?</inlineHelpText>
        <label>La versión/arte es para campaña masiva</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Enlista_Los_Datos_Variables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo: NB_CTE = Nombre del cliente, MONTO_OFERTADO = Monto del crédito  
Incluye todas las que necesites.</inlineHelpText>
        <label>Enlista los datos variables</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Entregables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Plan de Medios aprobados con specs.</inlineHelpText>
        <label>Entregables</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Entregados__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Entregados en un Canal</description>
        <label>Entregados</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Erroneos__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Erroneo en un Canal</description>
        <label>Erróneos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificaciones_Pauta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Especificaciones a considerar para el desarrollo de la Pauta:</inlineHelpText>
        <label>Especificaciones pauta</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus_Landing_Page__c</fullName>
        <formula>TEXT(CRM_WF_Landing_Page__r.CRM_WF_Estatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estatus landing page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Estatus__c</fullName>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brief Arte</fullName>
                </value>
                <value>
                    <fullName>Aprobación Brief Arte</fullName>
                </value>
                <value>
                    <fullName>Aprobación Brief JM</fullName>
                </value>
                <value>
                    <fullName>Aprobación Brief EG+</fullName>
                </value>
                <value>
                    <fullName>Aprobación Arte</fullName>
                </value>
                <value>
                    <fullName>Planeación y asignación de recursos</fullName>
                </value>
                <value>
                    <fullName>Revisión de comentarios</fullName>
                </value>
                <value>
                    <fullName>Realizar ajustes en HTML</fullName>
                </value>
                <value>
                    <fullName>Revisión final de copy</fullName>
                </value>
                <value>
                    <fullName>Realizar ajustes en HTML y Copy</fullName>
                </value>
                <value>
                    <fullName>Proof de propuesta</fullName>
                </value>
                <value>
                    <fullName>Generación de Copy</fullName>
                </value>
                <value>
                    <fullName>Desarrollo pieza HTML</fullName>
                </value>
                <value>
                    <fullName>Desarrollo pieza HTML y Copy</fullName>
                </value>
                <value>
                    <fullName>Revisión interna de propuesta</fullName>
                </value>
                <value>
                    <fullName>Aprobación interna de propuesta</fullName>
                </value>
                <value>
                    <fullName>Inicio Proceso Approval</fullName>
                </value>
                <value>
                    <fullName>Proof HQ</fullName>
                </value>
                <value>
                    <fullName>Subir propuesta para revisión a Proof HQ</fullName>
                </value>
                <value>
                    <fullName>Proceso approval marketing cloud</fullName>
                </value>
                <value>
                    <fullName>Revisión del material JM</fullName>
                </value>
                <value>
                    <fullName>Aprobación material JM</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Preheader</fullName>
                </value>
                <value>
                    <fullName>Aprobación Subject &amp; Preheader</fullName>
                </value>
                <value>
                    <fullName>Aprobación del material</fullName>
                </value>
                <value>
                    <fullName>Cierre</fullName>
                </value>
                <value>
                    <fullName>Subir propuesta a servidor</fullName>
                </value>
                <value>
                    <fullName>Aplicar cambios</fullName>
                </value>
                <value>
                    <fullName>Revisión final de proof</fullName>
                </value>
                <value>
                    <fullName>Revisión final de arte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_FIC__c</fullName>
        <formula>CRM_WF_Nombre_Del_Brief__r.CRM_WF_Campana_Brief__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Entrega__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Hard_Bounces__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Hard Bounces en un Canal</description>
        <label>Hard bounces</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Hora_De_Envio__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor hora de la Hora de envío en un Canal</description>
        <label>Hora de envío</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Indice_De_Apertura__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Abiertosúnicos entre Entregados en un Canal</description>
        <formula>CRM_WF_Abiertos_Unicos__c / CRM_WF_Entregados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Índice de apertura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Indice_De_Entrega__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Entregados entre Total de enviados en un Canal</description>
        <formula>CRM_WF_Entregados__c / CRM_WF_Total_De_Enviados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Índice de entrega</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Inicio_Flujo_Contratacion__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor fecha y hora de Inició flujo de contratación en un Canal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inició flujo de contratación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_KPI_Campa_a__c</fullName>
        <formula>CRM_WF_Nombre_Del_Brief__r.CRM_WF_Kpis_Apertura__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI campaña</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_KPI_Digital__c</fullName>
        <formula>CRM_WF_Nombre_Del_Brief__r.CRM_WF_Kpi_Con_Los_Que_Se_Medira_Envio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI digital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Landing_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Selección la landing page que corresponda a este Arte</inlineHelpText>
        <label>Landing page</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CRM_WF_Artes__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Landing</value>
            </filterItems>
            <infoMessage>Seleccionar la Landing Page que corresponda a este arte. Favor de crear el registro si no los has hecho.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_WF_Artes__c</referenceTo>
        <relationshipLabel>Arte</relationshipLabel>
        <relationshipName>Landing_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Legales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Incluye los terminos, condiciones y/o legales de la oferta, en caso de no tener legales se incluiran los textos legales institucionales.</inlineHelpText>
        <label>Legales</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Liga_con_Editable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Liga con editable</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Link_Call_To_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Link a donde debe dirigir el CTA (Call To Action / Botón). Ejemplo: Sanborns.com.mx, Bancomer.com.</inlineHelpText>
        <label>URL call to action</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Links_Para_Descarga_De_Material__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicar si se envía material adicional como fotografías, logos, artes editables, etc.</inlineHelpText>
        <label>Links para descarga de material</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mensaje_Principal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mensaje, ¿Qué es lo que queremos comunicarle al cliente? (no redactar el texto del correo).</inlineHelpText>
        <label>Mensaje</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_De_La_Version_Arte__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Los nombres de tus campañas y versiones son muy importantes para poder tener trazabilidad completa de lo que sucede  y para que todos los interesados puedan identificarla fácilmente.
Recuerda que tus campañas son vistas por diferentes equipos.</inlineHelpText>
        <label>Nombre de la versión/arte</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Brief__c</fullName>
        <description>Campo para la aplicación WF, que informa el fólio del Brief al que está asociado el Arte</description>
        <label>Folio brief</label>
        <referenceTo>CRM_WF_Brief__c</referenceTo>
        <relationshipLabel>Canales</relationshipLabel>
        <relationshipName>Artes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Videos__c</fullName>
        <label>Número de videos</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivo_De_La_Version__c</fullName>
        <label>Objetivo de la versión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMUNICACION</fullName>
                </value>
                <value>
                    <fullName>DIGITALIZACION</fullName>
                </value>
                <value>
                    <fullName>FIDELIZACION</fullName>
                </value>
                <value>
                    <fullName>INFORMATIVO_LEGAL</fullName>
                </value>
                <value>
                    <fullName>NOTIFICACIONES_ALERTAS</fullName>
                </value>
                <value>
                    <fullName>OM_ADQUISICION</fullName>
                </value>
                <value>
                    <fullName>PROMOCIONAL</fullName>
                </value>
                <value>
                    <fullName>PROMOCIONAL_ALIANZAS_COMERCIALES</fullName>
                </value>
                <value>
                    <fullName>RECUPERACION_WINBACK</fullName>
                </value>
                <value>
                    <fullName>RETENCION</fullName>
                </value>
                <value>
                    <fullName>VENTAS_ACTIVACION</fullName>
                </value>
                <value>
                    <fullName>PRUEBA_LITMUS</fullName>
                </value>
                <value>
                    <fullName>Activación</fullName>
                    <isActive>false</isActive>
                    <label>Activación</label>
                </value>
                <value>
                    <fullName>Adquisición</fullName>
                    <isActive>false</isActive>
                    <label>Adquisición</label>
                </value>
                <value>
                    <fullName>Ventas</fullName>
                    <isActive>false</isActive>
                    <label>Ventas</label>
                </value>
                <value>
                    <fullName>Winback Recuperar Clientes Perdidos</fullName>
                    <isActive>false</isActive>
                    <label>Winback Recuperar Clientes Perdidos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Open_Rate__c</fullName>
        <inlineHelpText>Porcentaje o tasa de apertura estimado para esta versión/arte.</inlineHelpText>
        <label>Open rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Opt_In__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Opt-In en un Canal</description>
        <label>Opt-in %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Opt_Out__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Opt-Outs entre Entregados en un Canal</description>
        <formula>CRM_WF_Opt_Outs__c / CRM_WF_Entregados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt-out %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Opt_Outs__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Opt-Outs en un Canal</description>
        <label>Opt-outs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Pasos_Contratacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pasos de contratación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Periodo_de_Campa_a_Hasta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Período de campaña: hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Periodo_de_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Período de campaña: de</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Preguntas_Frecuentes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preguntas frecuentes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Preheader__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preheader</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Producto__c</fullName>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alertas Bancomer</fullName>
                    <label>ALERTAS_BANCOMER</label>
                </value>
                <value>
                    <fullName>Apartados</fullName>
                    <label>APARTADOS</label>
                </value>
                <value>
                    <fullName>App Bbva Send</fullName>
                    <label>APP_BBVA_SEND</label>
                </value>
                <value>
                    <fullName>App Bbva Wallet</fullName>
                    <label>APP_BBVA_WALLET</label>
                </value>
                <value>
                    <fullName>Bnegocios</fullName>
                    <label>APP_BNEGOCIOS</label>
                </value>
                <value>
                    <fullName>App Linea Bancomer</fullName>
                    <label>APP_LINEA_BANCOMER</label>
                </value>
                <value>
                    <fullName>Tandapp</fullName>
                    <label>APP_TANDAPP</label>
                </value>
                <value>
                    <fullName>APP_TUYYO</fullName>
                </value>
                <value>
                    <fullName>App Multipagos</fullName>
                    <isActive>false</isActive>
                    <label>App Multipagos</label>
                </value>
                <value>
                    <fullName>Bancomer Movil</fullName>
                    <label>BANCOMER_MOVIL</label>
                </value>
                <value>
                    <fullName>Bancomercom</fullName>
                    <label>BANCOMERCOM</label>
                </value>
                <value>
                    <fullName>Bancomercom Y Bancomer Movil</fullName>
                    <label>BANCOMERCOM_Y_BANCOMER_MOVIL</label>
                </value>
                <value>
                    <fullName>BBVA GLOMO</fullName>
                    <label>BBVA_GLOMO</label>
                </value>
                <value>
                    <fullName>Bbva Momentum</fullName>
                    <label>BBVA_MOMENTUM</label>
                </value>
                <value>
                    <fullName>Boletin De Inversiones</fullName>
                    <label>BOLETIN_DE_INVERSIONES</label>
                </value>
                <value>
                    <fullName>Compra Venta  Divisas</fullName>
                    <label>COMPRA_VENTA_ DIVISAS</label>
                </value>
                <value>
                    <fullName>Credito Al Consumo</fullName>
                    <label>CREDITO_AL_CONSUMO</label>
                </value>
                <value>
                    <fullName>Credito Auto</fullName>
                    <label>CREDITO_AUTO</label>
                </value>
                <value>
                    <fullName>Cuentas</fullName>
                    <label>CUENTAS</label>
                </value>
                <value>
                    <fullName>Danf</fullName>
                    <label>DANF</label>
                </value>
                <value>
                    <fullName>Enrolamiento Biométrico</fullName>
                    <label>ENROLAMIENTO_BIOMETRICO</label>
                </value>
                <value>
                    <fullName>Fondos De Inversión</fullName>
                    <label>FONDOS_DE_INVERSION</label>
                </value>
                <value>
                    <fullName>Fundación</fullName>
                    <label>FUNDACION</label>
                </value>
                <value>
                    <fullName>Hipotecario</fullName>
                    <label>HIPOTECARIO</label>
                </value>
                <value>
                    <fullName>Línea Bancomer</fullName>
                    <label>LINEA _BANCOMER</label>
                </value>
                <value>
                    <fullName>Nómina</fullName>
                    <label>NOMINA</label>
                </value>
                <value>
                    <fullName>Plan De Pagos Fijos</fullName>
                    <label>PLAN_DE_PAGOS_FIJOS</label>
                </value>
                <value>
                    <fullName>Plazo Pagare</fullName>
                    <label>PLAZO_PAGARE</label>
                </value>
                <value>
                    <fullName>Puntos Bancomer</fullName>
                    <label>PUNTOS_BANCOMER</label>
                </value>
                <value>
                    <fullName>Pyme</fullName>
                    <label>PYME</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>